@@ -4,6 +4,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -21,6 +22,7 @@ import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
 
     private final CustomUserDetailsService customUserDetailsService;
@@ -44,29 +46,91 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .csrf(AbstractHttpConfigurer::disable) // Disable CSRF for stateless APIs
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Apply CORS configuration
+                .csrf(AbstractHttpConfigurer::disable)
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/**").permitAll() // IMPORTANT: Allows access to /api/auth/register and /api/auth/login without authentication
-                        .requestMatchers("/api/workflows/**").permitAll() // IMPORTANT: Allows access to /api/auth/register and /api/auth/login without authentication
-                        .requestMatchers("/api/public/**").permitAll() // Example for other public endpoints
-                        .anyRequest().authenticated() // All other requests require authentication
+                        // Public endpoints - be very specific
+                        .requestMatchers("GET", "/api/auth/users").permitAll() // Explicitly allow GET /api/auth/users
+                        .requestMatchers("POST", "/api/auth/register").permitAll()
+                        .requestMatchers("POST", "/api/auth/login").permitAll()
+                        .requestMatchers("POST", "/api/auth/refresh").permitAll()
+                        .requestMatchers("POST", "/api/auth/forgot-password").permitAll()
+                        .requestMatchers("POST", "/api/auth/reset-password").permitAll()
+                        .requestMatchers("/api/public/**").permitAll()
+                        .requestMatchers("/actuator/health").permitAll()
+                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
+                        
+                        // Protected auth endpoints
+                        .requestMatchers("GET", "/api/auth/me").authenticated()
+                        .requestMatchers("DELETE", "/api/auth/users/**").authenticated() // Protected user management endpoints
+                        .requestMatchers("POST", "/api/auth/change-password").authenticated()
+                        
+                        // Protected endpoints
+                        .requestMatchers("/api/workflows/**").authenticated()
+                        .requestMatchers("/api/users/**").authenticated()
+                        .requestMatchers("/api/executions/**").authenticated()
+                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                        
+                        // WebSocket endpoints
+                        .requestMatchers("/ws/**").authenticated()
+                        
+                        // All other requests require authentication
+                        .anyRequest().authenticated()
                 )
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // Use stateless sessions for JWT
-                .userDetailsService(customUserDetailsService) // Configure UserDetailsService directly
-                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .userDetailsService(customUserDetailsService)
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                .exceptionHandling(exception -> exception
+                        .authenticationEntryPoint((request, response, authException) -> {
+                            response.setStatus(401);
+                            response.setContentType("application/json");
+                            response.getWriter().write("{\"error\":\"Authentication required\",\"message\":\"" + authException.getMessage() + "\"}");
+                        })
+                        .accessDeniedHandler((request, response, accessDeniedException) -> {
+                            response.setStatus(403);
+                            response.setContentType("application/json");
+                            response.getWriter().write("{\"error\":\"Access denied\",\"message\":\"" + accessDeniedException.getMessage() + "\"}");
+                        })
+                );
 
         return http.build();
     }
 
-    // CORS Configuration Bean
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:4200")); // Allow your Angular app's origin
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        
+        // Allow specific origins
+        configuration.setAllowedOriginPatterns(List.of(
+            "http://localhost",      // Frontend on port 80
+            "http://localhost:4200", // Angular dev server
+            "http://localhost:3000", // Alternative dev port
+            "https://your-production-domain.com"  // Production domain
+        ));
+        
+        // Allow specific methods
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        
+        // Allow specific headers
+        configuration.setAllowedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Type",
+            "X-Requested-With",
+            "Accept",
+            "Origin",
+            "Access-Control-Request-Method",
+            "Access-Control-Request-Headers"
+        ));
+        
+        // Allow credentials
         configuration.setAllowCredentials(true);
+        
+        // Expose headers
+        configuration.setExposedHeaders(List.of("Authorization", "X-Total-Count"));
+        
+        // Max age for preflight requests
+        configuration.setMaxAge(3600L);
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
